--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "saloonphp/xml-wrangler": "*",
+        "saloonphp/xml-wrangler": "^1.2",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
